# kicad-symbols

./: .gitignore  4xxx.kicad_sym  4xxx_IEEE.kicad_sym  74xGxx.kicad_sym  74xx.kicad_sym  74xx_IEEE.kicad_sym  Amplifier_Audio.kicad_sym  Amplifier_Buffer.kicad_sym  Amplifier_Current.kicad_sym  Amplifier_Difference.kicad_sym  Amplifier_Instrumentation.kicad_sym  Amplifier_Operational.kicad_sym  Amplifier_Video.kicad_sym  Analog.kicad_sym  Analog_ADC.kicad_sym  Analog_DAC.kicad_sym  Analog_Switch.kicad_sym  Audio.kicad_sym  Auxiliary_Items.kicad_sym  Battery_Management.kicad_sym  Buffer.kicad_sym  CMakeLists.txt  CPLD_Altera.kicad_sym  CPLD_Microchip.kicad_sym  CPLD_Renesas.kicad_sym  CPLD_Xilinx.kicad_sym  CPU.kicad_sym  CPU_NXP_6800.kicad_sym  CPU_NXP_68000.kicad_sym  CPU_NXP_IMX.kicad_sym  CPU_PowerPC.kicad_sym  Comparator.kicad_sym  Connector_Audio.kicad_sym  Converter_ACDC.kicad_sym  Converter_DCDC.kicad_sym  DSP_AnalogDevices.kicad_sym  DSP_Microchip_DSPIC33.kicad_sym  DSP_Motorola.kicad_sym  DSP_Texas.kicad_sym  Device.kicad_sym  (+166 more)
4xxx.kicad_symdir/: 14528.kicad_sym  14529.kicad_sym  14538.kicad_sym  4001.kicad_sym  4002.kicad_sym  4009.kicad_sym  4010.kicad_sym  40106.kicad_sym  4011.kicad_sym  4012.kicad_sym  4013.kicad_sym  4016.kicad_sym  4017.kicad_sym  4020.kicad_sym  4021.kicad_sym  4022.kicad_sym  4023.kicad_sym  4025.kicad_sym  4027.kicad_sym  4028.kicad_sym  4029.kicad_sym  4040.kicad_sym  4046.kicad_sym  4047.kicad_sym  4049.kicad_sym  4050.kicad_sym  4051.kicad_sym  4052.kicad_sym  4053.kicad_sym  4056.kicad_sym  4060.kicad_sym  4066.kicad_sym  4069.kicad_sym  4070.kicad_sym  4071.kicad_sym  4072.kicad_sym  4073.kicad_sym  4075.kicad_sym  4077.kicad_sym  4081.kicad_sym  (+11 more)
4xxx_IEEE.kicad_symdir/: 4001.kicad_sym  4002.kicad_sym  4006.kicad_sym  4008.kicad_sym  4009.kicad_sym  4010.kicad_sym  40104.kicad_sym  40106.kicad_sym  4011.kicad_sym  40110.kicad_sym  4012.kicad_sym  4013.kicad_sym  4014.kicad_sym  4015.kicad_sym  4016.kicad_sym  40160.kicad_sym  40161.kicad_sym  40162.kicad_sym  40163.kicad_sym  4017.kicad_sym  40174.kicad_sym  40175.kicad_sym  4018.kicad_sym  4019.kicad_sym  40192.kicad_sym  40193.kicad_sym  40194.kicad_sym  4020.kicad_sym  4021.kicad_sym  4022.kicad_sym  4023.kicad_sym  4024.kicad_sym  40240.kicad_sym  40244.kicad_sym  40245.kicad_sym  4025.kicad_sym  4027.kicad_sym  4028.kicad_sym  4029.kicad_sym  4030.kicad_sym  (+59 more)
74xGxx.kicad_symdir/: 74AHC1G00.kicad_sym  74AHC1G02.kicad_sym  74AHC1G04.kicad_sym  74AHC1G08.kicad_sym  74AHC1G125.kicad_sym  74AHC1G126.kicad_sym  74AHC1G14.kicad_sym  74AHC1G32.kicad_sym  74AHC1G4210.kicad_sym  74AHC1G86.kicad_sym  74AHC1GU04.kicad_sym  74AHC2G00.kicad_sym  74AHCT1G00.kicad_sym  74AHCT1G02.kicad_sym  74AHCT1G04.kicad_sym  74AHCT1G08.kicad_sym  74AHCT1G125.kicad_sym  74AHCT1G126.kicad_sym  74AHCT1G14.kicad_sym  74AHCT1G32.kicad_sym  74AHCT1G86.kicad_sym  74AHCT1GU04.kicad_sym  74AHCT2G00.kicad_sym  74AUC1G00.kicad_sym  74AUC1G02.kicad_sym  74AUC1G04.kicad_sym  74AUC1G06.kicad_sym  74AUC1G07.kicad_sym  74AUC1G08.kicad_sym  74AUC1G125.kicad_sym  74AUC1G126.kicad_sym  74AUC1G14.kicad_sym  74AUC1G17.kicad_sym  74AUC1G18.kicad_sym  74AUC1G19.kicad_sym  74AUC1G240.kicad_sym  74AUC1G32.kicad_sym  74AUC1G66.kicad_sym  74AUC1G74.kicad_sym  74AUC1G79.kicad_sym  (+134 more)
74xx.kicad_symdir/: 7400.kicad_sym  7402.kicad_sym  74469.kicad_sym  7454.kicad_sym  74AHC04.kicad_sym  74AHC240.kicad_sym  74AHC244.kicad_sym  74AHC273.kicad_sym  74AHC373.kicad_sym  74AHC374.kicad_sym  74AHC541.kicad_sym  74AHC595.kicad_sym  74AHCT04.kicad_sym  74AHCT123.kicad_sym  74AHCT125.kicad_sym  74AHCT240.kicad_sym  74AHCT244.kicad_sym  74AHCT273.kicad_sym  74AHCT373.kicad_sym  74AHCT374.kicad_sym  74AHCT541.kicad_sym  74AHCT595.kicad_sym  74AHCV17APW.kicad_sym  74ALVC164245.kicad_sym  74CB3Q16210DGG.kicad_sym  74CB3Q16210DGV.kicad_sym  74CB3Q16210DL.kicad_sym  74CB3T16210DGG.kicad_sym  74CB3T16210DGV.kicad_sym  74CBT16210CDGG.kicad_sym  74CBT16210CDGV.kicad_sym  74CBT16210CDL.kicad_sym  74CBT3861.kicad_sym  74CBTD16210DGG.kicad_sym  74CBTD16210DGV.kicad_sym  74CBTD16210DL.kicad_sym  74CBTD3861.kicad_sym  74CBTLV16212.kicad_sym  74CBTLV3257.kicad_sym  74CBTLV3861.kicad_sym  (+237 more)
74xx_IEEE.kicad_symdir/: 7400.kicad_sym  7401.kicad_sym  7402.kicad_sym  7403.kicad_sym  7404.kicad_sym  7405.kicad_sym  7406.kicad_sym  7407.kicad_sym  7408.kicad_sym  7409.kicad_sym  7410.kicad_sym  7411.kicad_sym  7412.kicad_sym  74125.kicad_sym  74126.kicad_sym  74128.kicad_sym  7413.kicad_sym  74132.kicad_sym  74136.kicad_sym  7414.kicad_sym  74141.kicad_sym  74145.kicad_sym  74147.kicad_sym  74148.kicad_sym  74151.kicad_sym  74153.kicad_sym  74154.kicad_sym  74155.kicad_sym  74156.kicad_sym  74157.kicad_sym  74158.kicad_sym  74159.kicad_sym  7416.kicad_sym  74164.kicad_sym  (+151 more)
(+31999 files in other folders)
